--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
 dev_dependencies:
   test: ^1.21.0
   lints: ^4.0.0
+  # Path utilities for tests
+  path: ^1.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
